--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -106,7 +106,7 @@
                      </a>
                      <ul class="treeview-menu">
                         <li><a href="/report/report-student">Student Report (Test)</a></li>
-                        <li><a href="/report/report-faculty">Faculty Report (Feedback)</a></li>
+                        <!-- <li><a href="/report/report-faculty">Faculty Report (Feedback)</a></li> -->
                       
                      </ul>
                   </li>
