--- a/views/admin/attendance/attendance-student.ejs
+++ b/views/admin/attendance/attendance-student.ejs
@@ -34,9 +34,89 @@
                                  <h4>Student Attendance</h4>
                               </a>
                            </div>
+                           
                         </div>
                         <div class="panel-body">
+                             <% if(user[0].role == "student"){ %> 
+                                <div align="right">
+                                  <% if(data.length>0){ %>
 
+                                    <% if(data[0].check_in_flag === "0" && data[0].check_out_flag === "0"){ %>
+                                    <a href="#" class="btn btn-add checkedIn text-right" id="checkedIn"><i class="fa fa-plus"></i>Check IN</a> 
+
+                                     <% }else if(data[0].check_in_flag === "1" && data[0].check_out_flag === "0"){  %>
+                               
+                                  <a href="#" class="btn btn-add checkedOut text-right" id="checkedOut"><i class="fa fa-plus"></i>Check OUT</a> 
+                                    <% }else{%>
+                               
+                                  <a href="#" class="btn btn-add text-right" disabled><i class="fa fa-plus"></i>Checked OUT</a> 
+                                    <% } %>
+                                       <% }else{ %> 
+                                 <a href="#" class="btn btn-add checkedIn text-right" id="checkedIn"><i class="fa fa-plus"></i>Check IN</a> 
+                                 <% } %>
+                                 </div>
+                                    <% } %>
+                              <% if(user[0].role == "student"){ %> 
+                                <div class="row"> 
+                 
+                   <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                       <b> Checkin Time :  <span id="checkin_time"> </span></b>
+                       
+                  </div>
+                   <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                       <b> Checkout Time : <span id="checkout_time"> </span></b>
+                       
+                  </div>
+                  </div>
+                   <% } %>
+                  <br>
+                        <div class="row"> 
+                           <% if(user[0].role == "school" || user[0].role == "faculty"){ %> 
+                            <div class="form-group col-lg-3">
+                           <label>Class( only for school/faculty)</label>
+                                   <select name="class_id" id="class_id" class="form-control" required="">
+                                    <option value="">Please Select</option>
+                                     <% if(data.length){ %>
+                                       <% for(let i=0; i<data.length; i++){ %>
+
+                                       <option value="<%= data[i].id  %>"><%= data[i].class_name  %></option>
+
+                                        <% } %>
+                                        <% } %>
+                                       
+                                   </select> 
+ </div>
+								  <div class="form-group col-lg-3">
+                                    <label>student( only for school/faculty)</label>
+                                   <select name="student_id" id="student_id" class="form-control" required="">
+                                    <option value="">Please Select</option>
+                                     
+                                       
+                                   </select> 
+                                </div>
+                           <% } %> 
+                        
+                                 <div class="form-group col-lg-3">
+                                      <label>select Date Range</label><br>
+                                  <div id="reportrange"  class="pull-left" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc;">
+                                    <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>&nbsp;
+                                    <span></span> <b class="caret"></b>
+                                 </div>
+                                
+                                 </div>
+                                  <div class="form-group col-lg-3">
+                                      <label></label><br>
+                                       <% if(user[0].role == "school" || user[0].role == "faculty"){ %> 
+                                <button class="btn btn-success" id="filter_records">Filter</button>
+                                  <% } %> 
+                                   <% if(user[0].role == "student"){ %> 
+                                <button class="btn btn-success" id="filter_records_by_student">Filter</button>
+                                  <% } %> 
+                                 </div>
+       
+           
+			<br>
+        </div>
 			
 					
 		<br>
@@ -47,12 +127,12 @@
 						
 							<thead>
 								<tr>
-									<th> Name</th>
+									<th> Date</th>
 								
                            <th>Status</th>
 									<th>Check IN</th>
 									<th>Check OUT</th>
-									<th>Action</th>
+									
 								</tr>
 							</thead>
 						</table>
@@ -68,66 +148,38 @@
          <!-- /.content-wrapper -->
         <%- include('../../partials/footer') %>
       </div>
-	   <div class="modal fade" id="addtask" tabindex="-1" role="dialog">
-                  <div class="modal-dialog">
-                     <div class="modal-content">
-                        <div class="modal-header modal-header-primary">
-                           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                           <h3><i class="fa fa-plus m-r-5"></i> add new task</h3>
-                        </div>
-                        <div class="modal-body">
-                           <div class="row">
-                              <div class="col-md-12">
-                                 <form class="form-horizontal">
-                                    <fieldset>
-                                       <!-- Text input-->
-                                       <div class="col-md-6 form-group">
-                                          <label class="control-label">Task Name</label>
-                                          <input type="text" placeholder="Task Name" class="form-control">
-                                       </div>
-                                       <div class="col-md-6 form-group">
-                                          <label class="control-label">Due date</label>
-                                          <input type="number" placeholder="Due title" class="form-control">
-                                       </div>
-                                       <div class="col-md-6 form-group">
-                                          <label class="control-label">Description</label>
-                                          <input type="text" placeholder="Description" class="form-control">
-                                       </div>
-                                       <div class="col-md-6 form-group">
-                                          <label class="control-label">Assign to</label>
-                                          <input type="text" placeholder="Assign to" class="form-control">
-                                       </div>
-                                       <!-- Text input-->
-                                       <div class="col-md-6 form-group">
-                                          <label class="control-label">status</label>
-                                          <input type="text" placeholder="status" class="form-control">
-                                       </div>
-                                       <div class="col-md-12 form-group user-form-group">
-                                          <div class="pull-right">
-                                             <button type="button" class="btn btn-danger btn-sm">Cancel</button>
-                                             <button type="submit" class="btn btn-add btn-sm">Update</button>
-                                          </div>
-                                       </div>
-                                    </fieldset>
-                                 </form>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="modal-footer">
-                           <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Close</button>
-                        </div>
-                     </div>
-                     <!-- /.modal-content -->
-                  </div>
-                  <!-- /.modal-dialog -->
-               </div>
+
       <!-- /.wrapper -->
       <!-- Start Core Plugins
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
 
+   <script type="text/javascript" language="javascript">
+$(document).on('change','#class_id', function () {
+   var id = $(this).val(); 
+  $.ajax({
+         url: `/report/fetch-student-by-class`,
+         type: "post",
+         data:{classId:id},
+         dataType: "json",
+         cache: false,
+         success: function (data) {
+            console.log(data);
+         let option;
+        for(let i=0; i<data.length; i++){
+           option += `<option value="${data[i].id}">${data[i].name}</option>`
+        }
+             $("#student_id").html("");
+             
+             $("#student_id").html(`<option value="">Please Select.</option>`);
+            $("#student_id").append(option);
+          
+          
+          
+        },
+      });
+})
 $(document).ready(function(){
 	
 
@@ -183,10 +235,180 @@ $(document).ready(function(){
         { data: "attendance_status" },
         { data: "check_in" },
         { data: "check_out" },
-        { data: "action" },
 	],
 		
 	});
+ 
+let startDates;
+let endDates;
+$(function() {
+
+    let start = moment().subtract(29, 'days');
+    var end = moment();
+
+    function cb(start, end) {
+    
+        $('#reportrange span').html(start.format('YYYY-MM-DD') + ' - ' + end.format('YYYY-MM-DD'));
+          startDates = start.format('YYYY-MM-DD');
+         endDates = end.format('YYYY-MM-DD');
+       
+    }
+
+    $('#reportrange').daterangepicker({
+        startDate: start,
+        endDate: end,
+        ranges: {
+           'Today': [moment(), moment()],
+           'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+           'Last 7 Days': [moment().subtract(6, 'days'), moment()],
+           'Last 30 Days': [moment().subtract(29, 'days'), moment()],
+           'This Month': [moment().startOf('month'), moment().endOf('month')],
+           'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
+        }
+    }, cb);
+
+    cb(start, end);
+    
+});
+ $(document).on('click','#filter_records', function () {
+     var classId = $("#class_id").val(); 
+var studentId = $("#student_id").val(); 
+
+         if(classId == ""){
+         alert("please select class")
+        }
+        if(studentId == ""){
+         alert("please select Student")
+        }
+   $.ajax({
+         url: `/attendance/get-student-attendance-report`,
+         type: "post",
+         data:{startDates:startDates,endDates:endDates,classId:classId,studentId:studentId},
+         dataType: "json",
+         cache: false,
+         success: function (data) {
+            console.log(data);
+       
+          
+        },
+      });
+       
+})
+
+ $(document).on('click','#filter_records_by_student', function () {
+   
+   $.ajax({
+         url: `/attendance/get-report-by-student`,
+         type: "post",
+         data:{startDates:startDates,endDates:endDates},
+         dataType: "json",
+         cache: false,
+         success: function (data) {
+            console.log(data);
+       
+          
+          
+        },
+      });
+       
+})
+
+ $(document).on('click','.checkedIn', function () {
+var currentDate = new Date();
+// Extract individual time components
+var hours = currentDate.getHours();
+var minutes = currentDate.getMinutes();
+var seconds = currentDate.getSeconds();
+
+// Format the time
+var formattedTime = hours + ':' + (minutes < 10 ? '0' : '') + minutes + ':' + (seconds < 10 ? '0' : '') + seconds;
+
+// Display formatted time
+     if ('geolocation' in navigator) {
+       navigator.geolocation.getCurrentPosition(function(position) { 
+       let latitude = position.coords.latitude;
+        let  longitude = position.coords.longitude;
+           $.ajax({
+         url: `/attendance/checkin-student-attendance`,
+         type: "post",
+         data:{formattedTime:formattedTime,latitude:latitude,longitude:longitude},
+         dataType: "json",
+         cache: false,
+         success: function (data) {
+            console.log(data);
+      if(data){
+
+         toastr.success('Checked IN Successfuly !!')
+         // Get the element
+
+$('#checkedIn').html("");
+$('#checkedIn').removeClass("checkedIn");
+$('#checkedIn').addClass("checkedOut");
+$('#checkedIn').html("Check OUT");
+      }else{
+          toastr.error('You are not in range !!')
+      }
+        },
+      });
+          });
+          } else { 
+            console.log('Geolocation is not supported by this browser.');
+          } 
+
+
+  
+       
+})
+
+$(document).on('click','.checkedOut', function () {
+  var currentDate = new Date();
+// Extract individual time components
+var hours = currentDate.getHours();
+var minutes = currentDate.getMinutes();
+var seconds = currentDate.getSeconds();
+
+// Format the time
+var formattedTime = hours + ':' + (minutes < 10 ? '0' : '') + minutes + ':' + (seconds < 10 ? '0' : '') + seconds;
+
+// Display formatted time
+console.log("Formatted Time (HH:MM:SS):", formattedTime);
+     if ('geolocation' in navigator) {
+       navigator.geolocation.getCurrentPosition(function(position) { 
+       let latitude = position.coords.latitude;
+        let  longitude = position.coords.longitude;
+         $.ajax({
+         url: `/attendance/checkout-student-attendance`,
+         type: "post",
+         data:{formattedTime:formattedTime,latitude:latitude,longitude:longitude},
+         dataType: "json",
+         cache: false,
+         success: function (data) {
+            console.log(data);
+       if(data.data === "not"){
+           toastr.error('You are not in range !!')
+       }
+            if(data.data === "yes"){
+         toastr.success('Checked OUT Successfuly !!')
+                     
+$('#checkedOut').html("");
+$('#checkedOut').removeClass("checkedOut");
+$('#checkedOut').html("Checked OUT");
+               
+      }
+      if(data.data === "no"){
+          toastr.error('Check IN First to checkout !!')
+      }
+          
+        },
+      });
+          });
+          } else { 
+            console.log('Geolocation is not supported by this browser.');
+          } 
+
+  
+       
+})
 
 });	
 </script>
