--- a/views/admin/exam/subjective-marks.ejs
+++ b/views/admin/exam/subjective-marks.ejs
@@ -121,13 +121,7 @@
                                     <label>Student Name</label>
                                    <select name="studentId" class="form-control" id="studentId">
                                        <option value="">please Select</option>
-                                       <% if(data.length){ %>
-                                       <% for(let i=0; i<data.length; i++){ %>
-
-                                       <option value="<%= data[i].id  %>"><%= data[i].class_name  %></option>
-
-                                        <% } %>
-                                        <% } %>
+                                     
                                     </select>
                                 </div>
                                
@@ -158,14 +152,7 @@
                    
                      <select  class="form-control" name="subject1" id="subject1" required>
                          <option value="">Please Select.</option>
-                         <% if(data.length){ %>
-                                       <% for(let i=0; i<data.length; i++){ %>
-
-                                       <option value="<%= data[i].id  %>"><%= data[i].class_name  %></option>
-
-                                        <% } %>
-                                        <% } %>
-                          
+                        
                       </select>
                   </td>
 
@@ -217,6 +204,28 @@
                             </div>
                         </form>
                               </div>
+                           </div>
+                        </div>
+                        <div class="modal-footer">
+                           <button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Close</button>
+                        </div>
+                     </div>
+                     <!-- /.modal-content -->
+                  </div>
+                  <!-- /.modal-dialog -->
+               </div>
+               <div class="modal fade" id="viewSubjectMarksModal" tabindex="-1" role="dialog">
+                  <div class="modal-dialog modal-lg"  role="document">
+                     <div class="modal-content">
+                        <div class="modal-header modal-header-primary">
+                           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                           <h3><i class="fa fa-plus m-r-5"></i> View Subjective Marks Details</h3>
+                        </div>
+                        <div class="modal-body">
+                         
+                              <div id="viewSubjectMarksDiv">
+                               
+                             
                            </div>
                         </div>
                         <div class="modal-footer">
@@ -302,6 +311,63 @@
    <%- include('../../partials/footer-script') %>
 
    <script type="text/javascript" language="javascript">
+$('select[name="classesId"]').on('change', function () {
+        	var id = $(this).val(); 
+  $.ajax({
+         url: `/exam/fetch-studentAndSubject-by-class`,
+         type: "post",
+         data:{classId:id},
+         dataType: "json",
+         cache: false,
+         success: function (data) {
+         let option;
+        for(let i=0; i<data.studentData.length; i++){
+           option += `<option value="${data.studentData[i].id}">${data.studentData[i].name}</option>`
+        }
+  let optionSubject;
+        for(let i=0; i<data.subjectData.length; i++){
+           optionSubject += `<option value="${data.subjectData[i].id}">${data.subjectData[i].subject_name}</option>`
+        }           
+          $("#subject1").html("");
+             $("#studentId").html("");
+              $("#subject1").html(`<option value="">Please Select.</option>`);
+             $("#studentId").html(`<option value="">Please Select.</option>`);
+            $("#studentId").append(option);
+            $("#subject1").append(optionSubject);
+          
+          
+        },
+      });
+})
+
+$(document).on('change','#classes', function () {
+   var id = $(this).val(); 
+  $.ajax({
+         url: `/exam/fetch-studentAndSubject-by-class`,
+         type: "post",
+         data:{classId:id},
+         dataType: "json",
+         cache: false,
+         success: function (data) {
+         let option;
+        for(let i=0; i<data.studentData.length; i++){
+           option += `<option value="${data.studentData[i].id}">${data.studentData[i].name}</option>`
+        }
+  let optionSubject;
+        for(let i=0; i<data.subjectData.length; i++){
+           optionSubject += `<option value="${data.subjectData[i].id}">${data.subjectData[i].subject_name}</option>`
+        }           
+          $("#subject2").html("");
+             $("#studentId1").html("");
+              $("#subject2").html(`<option value="">Please Select.</option>`);
+             $("#studentId1").html(`<option value="">Please Select.</option>`);
+            $("#studentId1").append(option);
+            $("#subject2").append(optionSubject);
+          
+          
+        },
+      });
+})
 
  let i = 1,
       lenghtMarks = [];
@@ -436,9 +502,17 @@
          cache: false,
          success: function (data) {
         console.log(data);
+         let optionClass;
+        for(let i=0; i<data.classData.length; i++){
+           optionClass += `<option value="${data.classData[i].id}"${data.data[0].cId==data.classData[i].id?'selected':""}>${data.classData[i].class_name}</option>`
+        }
          let option;
-        for(let i=0; i<data.classes.length; i++){
-           option += `<option value="${data.classes[i].id}"${data.data[0].class_id==data.classes[i].id?'selected':""}>${data.classes[i].class_name}</option>`
+        for(let i=0; i<data.studentData.length; i++){
+           option += `<option value="${data.studentData[i].id}"${data.data[0].student_id==data.studentData[i].id?'selected':""}>${data.studentData[i].name}</option>`
+        }
+         let optionSubject;
+        for(let i=0; i<data.subjectData.length; i++){
+           optionSubject += `<option value="${data.subjectData[i].id}"${data.data[0].subject_id==data.subjectData[i].id?'selected':""}>${data.subjectData[i].subject_name}</option>`
         }
             let formDetails = ``;
             formDetails += `<form action="/exam/update-subject-marks-by-id" method="post">
@@ -447,15 +521,37 @@
                             <div class="row">
                                 <div class="form-group col-lg-6">
                                     <label>Class Name</label>
-                                    <select name="classesId" class="form-control">
+                                    <select name="classes" id="classes" class="form-control">
+                                    <option value="">Please Select</option>
+                                   ${optionClass}
+                                   </select>
+                                </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Student Name</label>
+                                    <select name="studentId1"  id="studentId1" class="form-control">
                                     <option value="">Please Select</option>
                                    ${option}
                                    </select>
                                 </div>
+                                  <div class="form-group col-lg-6">
+                                    <label>Subject Name</label>
+                                    <select name="subject2" id="subject2" class="form-control">
+                                    <option value="">Please Select</option>
+                                   ${optionSubject}
+                                   </select>
+                                </div>
 
                                  <div class="form-group col-lg-6">
-                                    <label>Subject Name</label>
-                                    <input type="text" class="form-control" value="${data.data[0].subject_name}" name="subject_name">
+                                    <label>Total Marks</label>
+                                    <input type="text" class="form-control" value="${data.data[0].total_marks}" name="total_marks">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Pass Marks</label>
+                                    <input type="text" class="form-control" value="${data.data[0].passing_marks}" name="passing_marks">
+                                </div>
+                                 <div class="form-group col-lg-6">
+                                    <label>Obtained Marks</label>
+                                    <input type="text" class="form-control" value="${data.data[0].obtained_marks}" name="obtained_marks">
                                 </div>
                                 
                               
@@ -469,6 +565,40 @@
                             </div>
                         </form>`;
             $("#editSubjectMarksDiv").html(formDetails);
+          
+        },
+      });
+    } catch (err) {
+      console.error(err);
+    }
+  }
+
+                 function viewSubjectMarks(subjectId) {
+    try {
+     
+      $("#viewSubjectMarksDiv").html("");
+      $("#viewSubjectMarksModal").modal("toggle");
+      $.ajax({
+         url: `/exam/view-subject-marks-byid`,
+         type: "post",
+         data:{subjectId:subjectId},
+         dataType: "json",
+         cache: false,
+         success: function (data) {
+       console.log(data);
+            let formDetails = ``;
+             formDetails += `<table class="table table-bordered table-striped"> 
+               
+               <tr><td>Student Name</td><td>${data[0].name}</td></tr>
+               <tr><td>Class</td><td>${data[0].class_name}</td></tr>
+                <tr><td>Subject Name</td><td>${data[0].subject_name}</td></tr>
+               <tr><td>Total Marks</td><td>${data[0].total_marks}</td></tr>
+               <tr><td>Passing Marks</td><td>${data[0].passing_marks}</td></tr>
+               <tr><td>Obtained Marks</td><td>${data[0].obtained_marks}</td></tr>
+              
+              
+               </table>`;
+            $("#viewSubjectMarksDiv").html(formDetails);
           
         },
       });
