--- a/views/partials/footer-script.ejs
+++ b/views/partials/footer-script.ejs
@@ -1,9 +1,20 @@
   <!-- jQuery -->
+    <!-- Include Required Prerequisites -->
+
+
+
 
       <script src="/assets/plugins/jQuery/jquery-1.12.4.min.js" type="text/javascript"></script>
       <!-- jquery-ui --> 
     
-       <script src="/assets/plugins/jQuery/jquery.min.js"></script>
+
+ <script type="text/javascript" src="//cdn.jsdelivr.net/jquery/1/jquery.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
+     
+
+<!-- 
+       <script src="/assets/plugins/jQuery/jquery.min.js"></script> -->
        <script src="/assets/plugins/jQuery/jquery.dataTables.min.js"></script>
 		<script src="/assets/bootstrap/js/dataTables.bootstrap.min.js"></script>  
 		<script src="/assets/dist/js/toastr.min.js"></script>
@@ -57,7 +68,7 @@
     <script src="/assets/dist/js/sweetalert.min.js"></script>
       <!-- Dashboard js -->
       <script src="/assets/dist/js/dashboard.js" type="text/javascript"></script>
-     
+      
       
       <!-- End Theme label Script
          =====================================================================-->
