--- a/views/admin/attendance/attendance-faculty.ejs
+++ b/views/admin/attendance/attendance-faculty.ejs
@@ -286,7 +286,7 @@ $(document).ready(function(){
 			type:"POST",
 		},
          columns: [
-        { data: "name" },
+        { data: "created_at" },
       
          { data: "attendance_status" },
         { data: "check_in" },
@@ -336,9 +336,51 @@ var facultyId = $("#faculty_id").val();
          data:{startDates:startDates,endDates:endDates,facultyId:facultyId},
          dataType: "json",
          cache: false,
-         success: function (data) {
-            console.log(data);
-       
+         success: function (datas) {
+            console.log(datas);
+            if (dataTable) {
+                  dataTable.destroy();
+                  dataTable.clear().draw();
+    }
+            if (datas && datas.length > 0) {
+                var dataArray = datas.map(function (item) {
+                    return [
+                        item.created_at,
+                        item.attendance_status,
+                        item.check_in,
+                        item.check_out
+                    ];
+                });
+                dataTable = $('#sample_data').DataTable({
+                    "processing": true,
+                    "serverSide": false, // Since you are processing data client-side
+                    "order": [],
+                    "data": dataArray,
+                    "columns": [
+                        { dataArray: "created_at" },
+                        { dataArray: "attendance_status" },
+                        { dataArray: "check_in" },
+                        { dataArray: "check_out" }
+                    ],
+                    dom: 'Bfrtip',
+                    buttons: [
+                        {
+                            extend: 'csv',
+                            exportOptions: { columns: 'th:not(:last-child)' }
+                        },
+                        {
+                            extend: 'pdf',
+                            exportOptions: { columns: 'th:not(:last-child)' }
+                        }
+                    ]
+                });
+            } else {
+                 if (dataTable) {
+                  dataTable.destroy();
+                  dataTable.clear().draw();
+    }
+                alert("No data found.");
+            }
           
         },
       });
@@ -346,17 +388,64 @@ var facultyId = $("#faculty_id").val();
 })
 $(document).on('click','#filter_records_by_faculty', function () {
     
+               
    $.ajax({
          url: `/attendance/get-report-by-faculty`,
          type: "post",
          data:{startDates:startDates,endDates:endDates},
          dataType: "json",
          cache: false,
-         success: function (data) {
-            console.log(data);
-        
-          
-          
+         success: function (datas) {
+           
+       
+            if (datas && datas.length > 0) {
+                if (dataTable) {
+                  dataTable.destroy();
+                  dataTable.clear().draw();
+    }
+                var dataArray = datas.map(function (item) {
+                    return [
+                        item.created_at,
+                        item.attendance_status,
+                        item.check_in,
+                        item.check_out
+                    ];
+                });
+                
+                dataTable = $('#sample_data').DataTable({
+                    "processing": true,
+                    "serverSide": false, // Since you are processing data client-side
+                    "order": [],
+                    "data": dataArray,
+                    "columns": [
+                        { dataArray: "created_at" },
+                        { dataArray: "attendance_status" },
+                        { dataArray: "check_in" },
+                        { dataArray: "check_out" }
+                    ],
+                    dom: 'Bfrtip',
+                    buttons: [
+                        {
+                            extend: 'csv',
+                            exportOptions: { columns: 'th:not(:last-child)' }
+                        },
+                        {
+                            extend: 'pdf',
+                            exportOptions: { columns: 'th:not(:last-child)' }
+                        }
+                    ]
+                });
+            } else {
+              if (dataTable) {
+                 dataTable.destroy();
+                  dataTable.clear().draw();
+
+                
+    }
+               alert("No data found.");
+             
+            }
+           
           
         },
       });
