--- a/views/admin/calender/calender.ejs
+++ b/views/admin/calender/calender.ejs
@@ -107,7 +107,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
+   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 
 $(document).ready(function(){
 	
