--- a/views/admin/exam/exam.ejs
+++ b/views/admin/exam/exam.ejs
@@ -264,7 +264,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
+   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
  $("#examForm").on("submit", async e => {
 							e.preventDefault();
 							try {
