--- a/views/admin/exam/subjective-marks.ejs
+++ b/views/admin/exam/subjective-marks.ejs
@@ -310,7 +310,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
+   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 $('select[name="classesId"]').on('change', function () {
         	var id = $(this).val(); 
   $.ajax({
