--- a/views/admin/feedback/feedback.ejs
+++ b/views/admin/feedback/feedback.ejs
@@ -205,7 +205,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
+   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 
 
      
