--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -319,7 +319,7 @@ display: none;
  
     </body>
 </html>
-<script>
+<script nonce="<%= nonce %>">
     $(document).ready(function(){
           $('#school-tab').hide();
         $('#student-tab').hide();
