--- a/views/admin/report/report-student.ejs
+++ b/views/admin/report/report-student.ejs
@@ -171,7 +171,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
+   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 $(document).on('change','#classes', function () {
    var id = $(this).val(); 
   $.ajax({
