--- a/views/admin/test-series/quiz-test.ejs
+++ b/views/admin/test-series/quiz-test.ejs
@@ -182,7 +182,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
+   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 
 
  function startExam(examId) {
