--- a/views/partials/top-bar.ejs
+++ b/views/partials/top-bar.ejs
@@ -12,12 +12,12 @@
 	<link rel="stylesheet" href="/assets/bootstrap/css/dataTables.bootstrap.min.css" />
 		
       <!-- Datatable CSS -->
-<link href='https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css' rel='stylesheet' type='text/css'>
+<link href='/assets/dist/css/jquery.dataTables.min.css' rel='stylesheet' type='text/css'>
 
 
 
 <!-- Datatable JS -->
-<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<script src="/assets/dist/js/jquery.dataTables.min.js"></script>
       <!-- Favicon and touch icons -->
       <link rel="shortcut icon" href="/assets/dist/img/ico/favicon.png" type="image/x-icon">
       <!-- Start Global Mandatory Style
@@ -63,7 +63,7 @@
       <!-- End Theme Layout Style
          =====================================================================-->
          <!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap/3/css/bootstrap.css" /> -->
- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
+ <link rel="stylesheet" type="text/css" href="/assets/dist/css/daterangepicker.css" />
 <style>
        	body {
   background: #ececec;
