--- a/views/admin/admission/admission.ejs
+++ b/views/admin/admission/admission.ejs
@@ -316,7 +316,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
+   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 
 
      
