--- a/views/admin/financial/view-faculty-fee-details.ejs
+++ b/views/admin/financial/view-faculty-fee-details.ejs
@@ -86,7 +86,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
+   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 
 
      
