--- a/views/admin/financial/view-student-fee-details.ejs
+++ b/views/admin/financial/view-student-fee-details.ejs
@@ -121,7 +121,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
+   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 
 
      
