--- a/views/admin/leave-tracker/leave-faculty-tracker.ejs
+++ b/views/admin/leave-tracker/leave-faculty-tracker.ejs
@@ -231,12 +231,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
-
-
-     
-       
-                  
+   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 
        
 function viewLeaveTracker(leaveId) {
