--- a/views/admin/subject/subject.ejs
+++ b/views/admin/subject/subject.ejs
@@ -212,7 +212,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
+   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 
 
      
