--- a/views/admin/test-series/full-length-test.ejs
+++ b/views/admin/test-series/full-length-test.ejs
@@ -184,7 +184,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script type="text/javascript" language="javascript">
+   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 
 
      
